index on dev: 2e039af .

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /osm2mssql.InfoDAL/obj
 *.suo
 /osm2mssql.Importer/obj/x64/Debug
+/.vs/osm2mssql/FileContentIndex/00acf7d5-e6b0-4ed8-9592-0eafec90bfeb.vsidx
+/.vs/osm2mssql/FileContentIndex/0ce62b8d-d101-4c5f-8b38-d6adab85e27b.vsidx
+/.vs/osm2mssql/FileContentIndex/1362631a-64fd-441c-aa0b-be4ed21ad985.vsidx
+/.vs/osm2mssql/FileContentIndex/5df5bad6-ad6f-4f9a-8f58-bd5c41e2ba22.vsidx
+/.vs/osm2mssql/FileContentIndex/1362631a-64fd-441c-aa0b-be4ed21ad985.vsidx
+/.vs/osm2mssql/FileContentIndex/0ce62b8d-d101-4c5f-8b38-d6adab85e27b.vsidx
