info.roads.maxspeed is now a float rather than text which could be anything. I have included a function and table for conversion but migrating existing data using is out of scope as I'm not sure what/who actually sets the Unit!!
I made an installer too to save some time and help me not lose the exe!

--- a/osm2mssql.Importer/osm2mssql.Importer.csproj
+++ b/osm2mssql.Importer/osm2mssql.Importer.csproj
@@ -61,7 +61,7 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
-    <ApplicationIcon>App.ico</ApplicationIcon>
+    <ApplicationIcon>wally.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -255,18 +255,24 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="App.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\warning.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SQL\SQLCommands.sql">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="SQL\CreateTables.sql" />
-    <EmbeddedResource Include="SQL\CreateDbExtension.sql" />
-    <EmbeddedResource Include="SQL\CreateDatabase.sql" />
+    <Resource Include="wally.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="SQL\CreateTables.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SQL\CreateDbExtension.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SQL\CreateDatabase.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
